Сделал аутентификацию (сервис file-sharing-security-service)  и авторизацию (AuthorizationFilter сервиса file-sharing-gateway-server) с помощью библ. jjwt и без keycloak